Remove deprecated URL constructor